# equipment-troubleshooting-rust-react

./: .env.example  .env.test  .gitignore  80_PERCENT_COVERAGE_ACHIEVED.md  ADMIN_IMPROVEMENT_ROADMAP.md  ADMIN_UX_REVIEW.md  BACKEND_FRONTEND_ALIGNMENT.md  BUGFIX_NEW_ISSUE_CREATION.md  CLEANUP_CHECKLIST.md  CODE_QUALITY_ASSESSMENT.md  CONTRIBUTING.md  CRUD_IMPROVEMENTS.md  Cargo.toml  DEPLOYMENT.md  ENTERPRISE_ASSESSMENT.md  FINAL_TEST_COVERAGE_SUMMARY.md  PERFORMANCE.md  PHASE_1_COMPLETE_SUMMARY.md  PHASE_1_TESTING_GUIDE.md  PHASE_1_TEST_SUMMARY.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_PROGRESS.md  PHASE_2_TESTING_PLAN.md  QUALITY_ANALYSIS.md  README.md  SECURITY.md  SESSION_SUMMARY.md  SSL_SETUP.md  apply-migration.js  package-lock.json  package.json  refactor.md  turbo.json
apps/api/: Cargo.toml  apply_migration.sql  ensure_global_start.sql  setup_test_db.ps1  setup_test_db.sh  test_output.txt  test_query.sql
apps/api/migrations/: 006_node_graph_refactor.sql  007_add_issue_category.sql  008_remove_legacy_tables.sql  009_create_audit_logs.sql  010_performance_optimizations.sql  20251024233252_initial_schema.sql  20251024233356_seed_data.sql  README.md
apps/api/src/: error.rs  lib.rs  main.rs  models.rs  openapi.rs
apps/api/src/middleware/: auth.rs  mod.rs  performance.rs  rate_limit.rs  security.rs
apps/api/src/routes/: admin.rs  answers.rs  auth.rs  connections.rs  issues.rs  mod.rs  nodes.rs  questions.rs  troubleshoot.rs
apps/api/src/utils/: audit.rs  cache.rs  jwt.rs  (+1 more)
apps/api/tests/: auth_tests.rs  error_tests.rs  models_tests.rs  validation_tests.rs
(+131 files in other folders)
