[package]
name = "equipment-troubleshooting"
version = "2.0.0"
edition = "2021"

[lib]
name = "equipment_troubleshooting"
path = "src/lib.rs"

[[bin]]
name = "equipment-troubleshooting"
path = "src/main.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[[bin]]
name = "apply_migration"
path = "src/bin/apply_migration.rs"
required-features = []

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "8.1", features = ["uuid-impl", "chrono-impl"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Environment
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
md5 = "0.7"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
